[gd_scene load_steps=8 format=2]

[ext_resource path="res://Minigames/Racing Game/Racing_Game_Game.gd" type="Script" id=1]
[ext_resource path="res://Minigames/Racing Game/Player_Car.tscn" type="PackedScene" id=2]
[ext_resource path="res://Minigames/Racing Game/Fuel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Minigames/Racing Game/Oil.tscn" type="PackedScene" id=4]
[ext_resource path="res://Minigames/Racing Game/Hole.tscn" type="PackedScene" id=5]
[ext_resource path="res://Minigames/Racing Game/Block.tscn" type="PackedScene" id=6]
[ext_resource path="res://Minigames/Racing Game/Star.tscn" type="PackedScene" id=7]

[node name="Racing_Game_Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Player_Car" parent="." instance=ExtResource( 2 )]

[node name="Button" type="Button" parent="."]
pause_mode = 2
margin_left = 64.3778
margin_top = 838.406
margin_right = 439.378
margin_bottom = 1071.41

[node name="Boost_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Slip_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Fuel_Label" type="Label" parent="."]
margin_left = 1698.87
margin_top = 11.1037
margin_right = 1738.87
margin_bottom = 25.1037
rect_scale = Vector2( 4, 4 )
text = "Fuel: 0"

[node name="Score_Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 5, 5 )
text = "Score: 0"

[node name="Death_Label" type="Label" parent="."]
visible = false
margin_left = 603.886
margin_top = 274.671
margin_right = 664.886
margin_bottom = 288.671
rect_scale = Vector2( 10, 10 )
text = "You Lose!"

[node name="Fuel" parent="." instance=ExtResource( 3 )]
position = Vector2( 1700.62, 886.349 )

[node name="Fuel2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1149.33, 179.218 )

[node name="Oil" parent="." instance=ExtResource( 4 )]
position = Vector2( 1127.9, 792.844 )

[node name="Oil2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1677.24, 222.074 )

[node name="Hole" parent="." instance=ExtResource( 5 )]
position = Vector2( 991.542, 418.824 )

[node name="Block" parent="." instance=ExtResource( 6 )]
position = Vector2( 617.214, 332.188 )

[node name="Star" parent="." instance=ExtResource( 7 )]
position = Vector2( 424.463, 586.456 )

[node name="Star2" parent="." instance=ExtResource( 7 )]
position = Vector2( 168.145, 639.77 )
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="timeout" from="Boost_Timer" to="." method="_on_Boost_Timer_timeout"]
[connection signal="timeout" from="Slip_Timer" to="." method="_on_Slip_Timer_timeout"]
